--- a/mathematik_physiker/übung3.tex
+++ b/mathematik_physiker/übung3.tex
@@ -8,7 +8,7 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 
-\date{28.10.2021}
+\date{5.10.2021}
 \title{Aufgabenblatt 3, Mathematik für Physiker 1}
 \author{Florian Adamczyk, Finn Wagner}
 
@@ -20,63 +20,81 @@
        \begin{enumerate}[label = (\alph*)]
             \item 
                 \begin{align*}
-                    ab & \leq \frac{1}{2} (a^2 x^2 + \frac{b^2}{x^2}) \: \text{für alle} \: x \in \mathbb{R} \ {0} \\
-                    \Leftrightarrow ab & \leq \frac{a^2 x^2}{2} + \frac{b^2}{2x^2} \: | * 2 \\
+                    ab & \leq \frac{1}{2} (a^2 x^2 + \frac{b^2}{x^2}) \: \text{für alle} \: x \in \mathbb{R} \backslash \{0\} \\
+                    \Leftrightarrow ab & \leq \frac{a^2 x^2}{2} + \frac{b^2}{2x^2} \: | \cdot 2 \\
                     \Leftrightarrow 2ab & \leq a^2 x^2 + \frac{b^2}{x^2} \: | -2ab \\
                     \Leftrightarrow 0 & \leq a^2 x^2 + \frac{b^2}{x^2} - 2ab \: | \: \text{mit } x^2 \text{ erweitert} \\ 
                     \Leftrightarrow 0 & \leq \frac{a^2 x^4}{x^2} + \frac{-2abx^2}{x^2} + \frac{b^2}{x^2} \\
-                    \Leftrightarrow 0 & \leq \frac{1}{x^2} (a^2 x^4  - 2abx^2 + b^2) \: | * x^2 \: \text{Binomische Formel} | \\
+                    \Leftrightarrow 0 & \leq \frac{1}{x^2} (a^2 x^4  - 2abx^2 + b^2) \: | \cdot x^2 \: \text{Binomische Formel} \\
                     \Leftrightarrow 0 & \leq {(ax^2 - b)}^2 \\
                     & \text{Ein Quadrat ist immer größer gleich Null}
                 \end{align*}
             \item 
                 \begin{gather*}
-                    ab + bc + ac \leq a^2 + b^2 + c^2 \: | \: *!2\\
+                    ab + bc + ac \leq a^2 + b^2 + c^2 \ | \: \cdot 2\\
                     \Leftrightarrow 2ab + 2bc + 2ac \leq 2a^2 + 2b^2 + 2c^2 \\
                     \text{Umformen mit: } -2ab -2bc -2ac \text{ und Umsortieren}\\
                     \Leftrightarrow 0 \leq (a^2 -2ab + b^2) + (a^2 -2ac + c^2) + (b^2 -2bc + c^2) \\
                     \text{2.te Binomische Formel anwenden:} \\
                     \Leftrightarrow 0 \leq {(a - b)}^2 + {(a - c)}^2 + {(b - c)}^2 \\
                     \text{Ein Quadrat ist immer größer gleich Null.} \\
-                    \text{Eine Summe aus Quadrate ist ebenfalls immer größer gleich Null}
+                    \text{Eine Summe aus Quadraten ist ebenfalls immer größer gleich Null}
                 \end{gather*}
             \item 
                 \begin{gather*}
                     \frac{a}{b} < \frac{c}{d} \Leftrightarrow^! \frac{a}{b} < \frac{a+c}{b+d} < \frac{c}{d} \\
-                    \text{1. Richtung} \\
-                    \Leftrightarrow \frac{a}{b} < \frac{a+c}{b+d} \Leftrightarrow a * (b + d) < b * (a + c) \\
+                    \text{Vordere Ungleichung} \\
+                    \frac{a}{b} <^! \frac{a+c}{b+d} \Leftrightarrow a \cdot (b + d) < b \cdot (a + c) \\
                     \Leftrightarrow ab + ad < ba + bc \: | \: - ab \\
                     \Leftrightarrow ad < bc \: | \: /b \: /d\\
                     \Leftrightarrow \frac{a}{b} < \frac{c}{d} \\
                     \\
-                    \text{2. Richtung} \\
-                    \frac{a+c}{b+d} <^! \frac{ad}{cb} \Leftrightarrow (a+c)*d < (b+d)*c \\
+                    \text{Hintere Ungleichung} \\
+                    \frac{a+c}{b+d} <^! \frac{c}{d} \Leftrightarrow (a+c)\cdot d < (b+d)\cdot c \\
                     \Leftrightarrow ad + cd < bc + dc \: | \: -cd \\
                     \Leftrightarrow ad < bc \: | \: /b \: /d \\
                     \Leftrightarrow \frac{a}{b} < \frac{c}{d}
                 \end{gather*}
-            \item
-                Summe macht Flo
+            \item 
+                Zu zeigen: \\
+                $n \in \mathbb{N}  \setminus \{0\} :\, a^n - b^n = (a-b) \cdot \sum_{k=0}^{n-1} a^k b^{n-1-k} $ \\
+                \\
+                Summen ausmultiplizieren:
+                $$ a^n-b^n = a \cdot \sum_{k=0}^{n-1} a^k \, b^{n-1-k} - b \cdot \sum_{k=0}^{n-1} a^k \, b^{n-1-k} $$
+                Vorfaktoren in Summen ziehen: 
+                $$ = \sum_{k=0}^{n-1} a^{k+1} \, b^{n-1-k} - \sum_{k=0}^{n-1} a^k \, b^{n-k} $$
+                Indexshift bei der hinteren Summe: $z=k-1 \Leftrightarrow k=z+1$
+                $$ = \sum_{k=0}^{n-1} a^{k+1} \, b^{n-1-k} - \sum_{z+1=0}^{n-2} a^{z+1} \, b^{n-(z+1)} $$
+                $$ = \sum_{k=0}^{n-1} a^{k+1} \, b^{n-1-k} - \sum_{z=-1}^{n-2} a^{z+1} \, b^{n-z-1} $$
+                Variable ersetzen: $z=k$ 
+                $$ = \sum_{k=0}^{n-1} a^{k+1} \, b^{n-1-k} - \sum_{k=-1}^{n-2} a^{k+1} \, b^{n-k-1} $$
+                ersten und letzten Summanden aus den Summen ziehen:
+                $$ = a^{n-1+1} \cdot b^{n-1-(n-1)} + \sum_{k=0}^{n-2} a^{k+1} \, b^{n-1-k} - \left( a^{-1+1} \cdot b^{n-1+1} +  \sum_{k=0}^{n-2} a^{k+1} \, b^{n-k-1}  \right) $$
+                umsortieren und Minusklammer auflösen:
+                $$ = a^n \cdot b^0 - a^0 \cdot b^n \, + \sum_{k=0}^{n-2} a^{k+1} \, b^{n-1-k}  \, -  \sum_{k=0}^{n-2} a^{k+1} \, b^{n-k-1}   $$
+                Die Summen kürzen sich weg:
+                $$ = b^0 \cdot a^n - a^0 \cdot b^n = 1 \cdot a^n - 1 \cdot b^n = a^n -b^n $$
+                $\hfill \square$
+                
         \end{enumerate}
     
     \section*{A 3.2}
         \begin{enumerate}[label = (\alph*)]
             \item 
                 \begin{gather*}
-                    \text{Für } n \in \mathbb{N} \text{ und } x > -1 \text{ gilt die Bernoulische Ungleichung:} \\
+                    \text{Für } n \in \mathbb{N} \text{ und } x > -1 \text{ gilt die Bernoullische Ungleichung:} \\
                     {(1+x)}^n \geq 1 + nx \\
                     \textbf{Induktionsanfang mit } n=0: \\
                     {1+x}^0 \geq 1 \geq 1 + 0x \\
                     \textbf{Induktionsschritt} \\
-                    {(1+x)}^n \geq 1 + nx \Rightarrow {(1+x)}^{n+1} \geq 1 + (n+1)x \\
+                    {(1+x)}^n \geq 1 + nx \Rightarrow^! {(1+x)}^{n+1} \geq 1 + (n+1)x \\
                     {(1+x)}^{n+1} \geq 1 + (n+1)x \\
-                    \Rightarrow {(1+x)}^{n}*(1+x) \geq 1 + nx + x \\
+                    \Leftrightarrow {(1+x)}^{n}\cdot(1+x) \geq 1 + nx + x \\
                     \text{Anwenden der Inuktionsvorraussetzung} \\
-                    \Rightarrow {(1+x)}^{n}*(1+x) \geq (1 + nx)*(1 + x) \\
+                    \Leftrightarrow {(1+x)}^{n}\cdot(1+x) \geq (1 + nx)\cdot(1 + x) \\
                     \text{Ausmultiplizieren} \\
-                    \Rightarrow (1 + nx)*(1 + x) = 1 + nx + nx^2 \\
-                    \Rightarrow 1 + nx + x + nx^2 \geq 1 + nx + x  \: | \: -x - nx - 1\\
-                    \Rightarrow nx^2 \geq 0 \\
+                    = 1 + nx + x + nx^2 \geq 1 + nx + x  \: | \: -x - nx - 1\\
+                    \Leftrightarrow nx^2 \geq 0 \\
                     \text{Ein Quadrat ist immer größer gleich Null} \\
                     \textbf{Da Induktionsanfang und Schritt gelten,} \\
                     \textbf{ist die Aussage für alle natürlichen Zahlen gültig}
@@ -85,16 +103,16 @@
             \item
                 \begin{align*}
                     q \in \mathbb{R}, q \neq 1; \: & \sum_{k=0}^{n} q^k = \frac{1-q^{n+1}}{1-q} \\
-                    \textbf{Induktionsafang mit } & n=0: \\
+                    \textbf{Induktionsanfang mit } & n=0: \\
                     \sum_{k=0}^{0} q^k = q^0 = 1 & = \frac{1-q^{0+1}}{1-q} = \frac{1-q}{1-q} = 1 \\
                     \textbf{Induktionsschritt} & \\
-                    \sum_{k=0}^{n} q^k & = \frac{1-q^{n+1}}{1-q} \Rightarrow \sum_{k=0}^{n+1} q^k = \frac{1-q^{n+2}}{1-q} \\
+                    \sum_{k=0}^{n} q^k & = \frac{1-q^{n+1}}{1-q} \Rightarrow^! \sum_{k=0}^{n+1} q^k = \frac{1-q^{n+2}}{1-q} \\
                     \sum_{k=0}^{n+1} q^k &= \frac{1-q^{n+2}}{1-q} \\
-                    \Leftrightarrow q^{n+1} + \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q}{1-q} \: | - q^{n+1} \\
-                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q}{1-q} - q^{n+1} \: | \: \text{Letzten Summand erweitern}\\
-                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q}{1-q} - \frac{q^{n+1}*(1-q)}{1-q} \\
-                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q}{1-q} - \frac{q^{n+1}- q^{n+1} * q}{1-q} \\
-                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q - q^{n+1} + q^{n+1} * q}{1-q} \\
+                    \Leftrightarrow q^{n+1} + \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} \cdot q}{1-q} \: | - q^{n+1} \\
+                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} \cdot q}{1-q} - q^{n+1} \: | \: \text{Letzten Summanden erweitern}\\
+                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} \cdot q}{1-q} - \frac{q^{n+1}\cdot(1-q)}{1-q} \\
+                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} \cdot q}{1-q} - \frac{q^{n+1}- q^{n+1} \cdot q}{1-q} \\
+                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} \cdot q - q^{n+1} + q^{n+1} \cdot q}{1-q} \\
                     \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1 - q^{n+1}}{1-q} \\
                     &\textbf{Da Induktionsanfang und Schritt gelten,} \\
                     &\textbf{ist die Aussage für alle natürlichen Zahlen gültig}
@@ -102,33 +120,33 @@
                 
             \item
                 \begin{gather*}
-                    n \in \mathbb{N}\{0\} \: n! \leq 4 * { \left( \frac{n}{2} \right) }^{n+1} \\
-                    \textbf{Induktionsafang mit } n=1: \\
-                    1! = 1 = 4 * {\left( \frac{1}{2} \right) }^{1+1} = 4 * {\left( \frac{1}{2} \right)}^{2} = 1 \\
+                    n \in \mathbb{N} \backslash \{0\} \: n! \leq 4 \cdot { \left( \frac{n}{2} \right) }^{n+1} \\
+                    \textbf{Induktionsanfang mit } n=1: \\
+                    1! = 1 = 4 \cdot {\left( \frac{1}{2} \right) }^{1+1} = 4 \cdot {\left( \frac{1}{2} \right)}^{2} = 1 \\
                     \textbf{Induktionsschritt} \\
-                    n! \leq 4 * {\left( \frac{n}{2} \right) }^{n+1} \Rightarrow (n+1)! \leq 4 * {\left( \frac{n+1}{2} \right) }^{n+2} \\
-                    (n+1)! = n! * (n+1) \\
+                    n! \leq 4 \cdot {\left( \frac{n}{2} \right) }^{n+1} \Rightarrow^! (n+1)! \leq 4 \cdot {\left( \frac{n+1}{2} \right) }^{n+2} \\
+                    (n+1)! = n! \cdot (n+1) \\
                     \text{Verwenden der Induktionsannahme} \\
-                    \Rightarrow n! * (n+1) \leq 4 * {\left( \frac{n}{2} \right) }^{n+1} * (n + 1) \\
+                    \Rightarrow n! \cdot (n+1) \leq 4 \cdot {\left( \frac{n}{2} \right) }^{n+1} \cdot (n + 1) \\
                     \\
-                    \text{Als Hilfsterm: } {(1 + \frac{1}{n})}^{n+1} \geq 2 \: \: \forall \: n \in \mathbb{N} \\
+                    \text{Als Hilfsterm: } {\left( 1 + \frac{1}{n} \right)}^{n+1} \geq 2 \: \: \forall \: n \in \mathbb{N} \\
                     \text{Da gilt: }
-                    {(1 + \frac{1}{n})}^{n+1} \Rightarrow^\text{Bernoulli Ungleichung} 1 + \frac{n+1}{n}\\
-                    \frac{n+1}{n} \text{ ist immer größer gleich 1 für } n \in \mathbb{N} \text{. Dieser Wert +1 ist also größer als 2} \\
+                    {\left(1 + \frac{1}{n} \right) }^{n+1} \geq^\text{Bernoulli Ungleichung} 1 + \frac{n+1}{n}\\
+                    \frac{n+1}{n} \text{ ist immer größer gleich 1 für } n \in \mathbb{N} \text{. Dieser Wert +1 ist also größer gleich 2} \\
                     \\
                     \Rightarrow \frac{{(1 + \frac{1}{n})}^{n+1}}{2} \geq 1 \\
                     \text{Abschätzen nach oben mit Faktor größer gleich 1} \\
-                    4 * {\left( \frac{n}{2} \right) }^{n+1} * (n + 1) \leq  4 * {\left( \frac{n}{2} \right) }^{n+1} * (n + 1) * \frac{{(1 + \frac{1}{n})}^{n+1}}{2} \\
+                    4 \cdot {\left( \frac{n}{2} \right) }^{n+1} \cdot (n + 1) \leq  4 \cdot {\left( \frac{n}{2} \right) }^{n+1} \cdot (n + 1) \cdot \frac{{(1 + \frac{1}{n})}^{n+1}}{2} \\
                     \text{Vereinfachen} \\
-                    = 4 * {\left( \frac{n}{2} \right) }^{n+1} * {(1 + \frac{1}{n})}^{n+1} * \frac{(n + 1)}{2} \\
+                    = 4 \cdot {\left( \frac{n}{2} \right) }^{n+1} \cdot {(1 + \frac{1}{n})}^{n+1} \cdot \frac{(n + 1)}{2} \\
                     \text{Vereinfachen} \\
-                    = 4 * {\left( \frac{n}{2} * {(1 + \frac{1}{n})} \right)}^{n+1} * \frac{(n + 1)}{2} \\
+                    = 4 \cdot {\left( \frac{n}{2} \cdot {(1 + \frac{1}{n})} \right)}^{n+1} \cdot \frac{(n + 1)}{2} \\
                     \text{Ausmultiplizieren} \\
-                    = 4 * {\left( \frac{n}{2} + \frac{1}{2} \right)}^{n+1} * \frac{(n + 1)}{2} \\
+                    = 4 \cdot {\left( \frac{n}{2} + \frac{1}{2} \right)}^{n+1} \cdot \frac{(n + 1)}{2} \\
                     \text{Vereinfachen} \\
-                    = 4 * {\left( \frac{n+1}{2} \right)}^{n+1} * \frac{(n + 1)}{2} \\
+                    = 4 \cdot {\left( \frac{n+1}{2} \right)}^{n+1} \cdot \frac{(n + 1)}{2} \\
                     \text{Faktor einklammern} \\
-                    = 4 * {\left( \frac{n+1}{2} \right) }^{n+2} \\
+                    = 4 \cdot {\left( \frac{n+1}{2} \right) }^{n+2} \\
                     \text{Damit gilt der Induktionsschritt} \\
                     \textbf{Da Induktionsanfang und Schritt gelten,} \\
                     \textbf{ist die Aussage für alle natürlichen Zahlen gültig}
@@ -141,16 +159,16 @@
                 \begin{gather*}
                     M_1 = \{1- \frac{1}{n}: n \in \mathbb{N} \} \\
                     \text{Zu zeigen: 1 ist eine obere Schranke von } M_1 \\
-                    1 - \frac{1}{n} \leq 1 \: \forall n \in \mathbb{N} \text{ Es folgt} 0 \leq \frac{1}{n} \\
+                    1 - \frac{1}{n} \leq 1 \: \forall n \in \mathbb{N} \text{ Es folgt } 0 \leq \frac{1}{n} \\
                     \Rightarrow \text{1 ist eine obere Schranke von } M_1
                 \end{gather*} 
                 \begin{gather*}
                     \text{Zu zeigen: 1 ist die kleinste obere Schranke von } M_1 \\
                     \text{Angenommen 1 wäre nicht die kleinste obere Schranke,} \\
-                    \text{so gäbe es eine kleinere im Abstand} \epsilon \\
+                    \text{so gäbe es eine kleinere im Abstand } \epsilon \\
                     \text{Sei } \epsilon > 0 \in \mathbb{R} \\
                     1 - \frac{1}{n} \leq 1 - \epsilon \Rightarrow \epsilon \leq \frac{1}{n} \: \forall n \in \mathbb{N} \\
-                    \text{Nach Lemma 2.18 gilt aber } \epsilon \leq 0 \text{ Das ist aber ein Wiederspruch, da } \epsilon > 0 \\
+                    \text{Nach Lemma 2.18 gilt aber } \epsilon \leq 0 \text{ Das ist aber ein Widerspruch, da } \epsilon > 0 \\
                     \Rightarrow \text{Somit war die Annahme falsch, es gibt keine kleinere obere Schranke.} \\
                     \text{1 ist das Supremum von } M_1
                 \end{gather*}
@@ -173,7 +191,7 @@
                     0 + \epsilon \leq 1 - \frac{1}{n} \Rightarrow \epsilon + \frac{1}{n} \leq 1 \\
                     \text{Sei } n=1 \\
                     \Rightarrow \epsilon + 1 = 1 \Rightarrow \epsilon = 0 \\
-                    \text{Da } \epsilon \text{ größer als Null sein muss ist dies ein Wiederspruch} \\
+                    \text{Da } \epsilon \text{ größer als Null sein muss ist dies ein Widerspruch} \\
                     \Rightarrow \text{Somit war die Annahme falsch, es gibt keine größere untere Schranke.} \\
                     \text{0 ist das Infimum von } M_1
                 \end{gather*}
@@ -189,7 +207,7 @@
                      M_2 = \{t \in \mathbb{R}, \text{t ist obere Schranke von } M_1\}
                 \]
                 In (a) haben wir das Supremum von \(M_1\) als 1 festgestellt. Jede weitere obere Schranke
-                muss also größer sein als 1. Die Menge lässt sich umbschreiben als: \\
+                muss also größer sein als 1. Die Menge lässt sich umschreiben als: \\
                 \[
                     M_2 = \{x \geq 1, \: x \in \mathbb{R}\}    
                 \]
@@ -216,10 +234,10 @@
                     \text{Sei } \epsilon > 0 \in \mathbb{R} \\
                     {\left(1- \frac{1}{n^2}\right)}^n \leq 1 - \epsilon \\
                     \text{Anwenden der Bernoulli-Ungleichung} \\
-                    1 - \epsilon \geq {\left(1- \frac{1}{n^2}\right)}^n \geq 1 - n * \frac{1}{n^2} = 1 - \frac{1}{n} \\
+                    1 - \epsilon \geq {\left(1- \frac{1}{n^2}\right)}^n \geq 1 - n \cdot \frac{1}{n^2} = 1 - \frac{1}{n} \\
                     \Rightarrow 1- \epsilon \geq 1 - \frac{1}{n} \\
-                    \Rightarrow \frac{1}{n} \geq \epsilon \:\: \forall \: n \in \mathbb{N}\\
-                    \text{Nach Lemma 2.18 gilt aber } \epsilon \leq 0 \text{ Das ist aber ein Wiederspruch, da } \epsilon > 0 \\
+                    \Rightarrow \frac{1}{n} \geq \epsilon \: \: \forall \: n \in \mathbb{N}\\
+                    \text{Nach Lemma 2.18 gilt aber } \epsilon \leq 0 \text{ Das ist aber ein Widerspruch, da } \epsilon > 0 \\
                     \Rightarrow \text{Somit war die Annahme falsch, es gibt keine kleinere obere Schranke.} \\
                     \text{1 ist das Supremum von } M_3
                 \end{gather*}
@@ -246,7 +264,7 @@
                     \text{Sei } n=1 \\
                     \Rightarrow 0 + \epsilon \leq {\left(1- \frac{1}{1^2}\right)}^1 \\
                     \Rightarrow \epsilon \leq 0^1 \Rightarrow \epsilon \leq 0 \\
-                    \text{Da } \epsilon \text{ größer als Null sein muss ist dies ein Wiederspruch} \\
+                    \text{Da } \epsilon \text{ größer als Null sein muss ist dies ein Widerspruch} \\
                     \Rightarrow \text{Somit war die Annahme falsch, es gibt keine größere untere Schranke.} \\
                     \text{0 ist das Infimum von } M_3
                 \end{gather*}
@@ -259,4 +277,32 @@
             Die Menge \(M_3\) ist nach oben beschränkt und hat in 1 ein Supremum, jedoch kein Maximum.
             Die Menge ist außerdem nach unten beschränkt und hat in 0 ein Infimum und Minimum
         \end{enumerate}
+
+        \section*{A 3.4}
+                Die Türme von Hanoi. Die drei Türme sind \(T_1, T_2, T_3\). Zu Beginn sind auf Turm \(T_1\) \(n \in \mathbb{N} \) Scheiben und auf \(T_2\) und \(T_3\) 0 Scheiben.
+                Die Scheiben sind von der kleinsten bis zur größten (n.ten) Scheiben nummeriert. \\
+                Für 1 Scheibe ist die Lösung trivial. Es braucht nur genau einen Schritt (s). \\
+                Für 2 Scheiben bewegt man die erste Scheibe auf Turm \(T_2\), die zweite auf \(T_3\) und dann die erste hinterher. Also ist \(s=3\)\\
+
+                Nter Schritt \\
+                Zu zeigen ist: Kann man einen Stapel von \(n\) Scheiben bewegen, so folgt daraus, dass man einen Stapel von \(n+1\) Scheiben bewegen kann.
+                Dazu bewege man die obersten \(n\) Scheiben des ersten Turmes auf einen zweiten Turm, dann die \(n+1\)te Scheibe auf einen dritten Turm.
+                Dann bewegt man die \(n\) Scheiben vom zweiten Turm auf den dritten. \\
+                Somit hat man einen Stapel mit \(n+1\) Scheiben bewegt. \\
+
+                Die oben gegebene Lösung folgt dem Prinzip der vollständigen Induktion. Der Induktionsanfang mit \(n=1\) ist angegeben.
+                In der allgemeinen Lösung ist gezeigt, wie, wenn man einen Stapel mit \(n\) Scheiben hat, man einen Turm mit \(n+1\) Scheiben bewegt.
+                Somit lässt sich ein belieg großer Stapel von einem auf einen anderen Turm bewegen. \\
+
+                Beim eigentlichen Ausführen sind jedoch noch einige Dinge zu berücksichtigen. \\
+                Beim bewegen von \(m\) großen Teilstapeln darf die \(m+1\) Scheibe nicht direkt mit der 1sten Scheibe bedeckt werden.
+
+                Die minimale Zugzahl lässt sich genauso rekursiv ermitteln. Um die unterste Scheibe eines \(n\) Scheiben hohen Stapels zu bewegen,
+                muss man alle darüber liegenden Scheiben auf einen anderen Turm legen. Angenommen man tut dies mit der minimalen Zuganzahl für
+                \(n-1\) Scheiben \(s_{n-1}\). Erst dann lässt sich die unterste Scheibe auf einen anderen Turm bewegen, wofür man genau einen Zug braucht.
+                Um die restlichen Scheiben nun wieder darauf zu legen, braucht man wieder \(s_{n-1}\) Züge.
+                Für einen Stapel von \(n\) Scheiben gilt also: \(s_n = s_{n-1} + 1 + s_{n-1}\). Führt man dies fort, so kommt man zu \(n=1\) für das man
+                nur genau einen Schritt braucht. Somit gilt mit vollständiger Induktion diese minimale Anzahl an Zügen.
+                Diese rekursive Formel lässt sich von \(s_n = s_{n-1} + 1 + s_{n-1}\) umschreiben zu \(s_n = 2^{n} - 1\)
+
 \end{document}
